--- a/html/introduction-to-html/getting-started/index.html
+++ b/html/introduction-to-html/getting-started/index.html
@@ -5,6 +5,7 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <p>This is my page, now its mine!</p>
+    <p>I'm new to github, and trying some stuff out.<p>
   </body>
 </html>
